--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Zeal React Boilerplate Test</title>
+    <link href="/public/client.css" rel="stylesheet" />
   </head>
   <body>
     <div id="root">
