Split client and vendor css into different files
Now vendor styles will always be loaded the same in any environment and
will always be free of custom styles. This allows you to rely on the
style loader for custom styles without anything bleeding through in the
vendor styles from old builds

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Zeal React Boilerplate Test</title>
+    <link href="/public/vendor.css" rel="stylesheet" />
     <link href="/public/client.css" rel="stylesheet" />
   </head>
   <body>
